--- a/compendium/ConfigurationAdmin/CMakeLists.txt
+++ b/compendium/ConfigurationAdmin/CMakeLists.txt
@@ -44,6 +44,8 @@ usMacroCreateBundle(ConfigurationAdmin
   BINARY_RESOURCES manifest.json
 )
 
+set_property(TARGET ConfigurationAdmin PROPERTY FOLDER compendium)
+
 target_include_directories(ConfigurationAdmin PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/src
   ${CppMicroServices_BINARY_DIR}/include
