--- a/compendium/ConfigurationAdmin/test/CMakeLists.txt
+++ b/compendium/ConfigurationAdmin/test/CMakeLists.txt
@@ -88,6 +88,11 @@ set_property(
   PROPERTY US_BUNDLE_NAME main
   )
 
+set_property(
+  TARGET ${us_configurationadmin_test_exe_name}
+  PROPERTY FOLDER tests
+  )
+
 target_include_directories(${us_configurationadmin_test_exe_name}
   PRIVATE $<TARGET_PROPERTY:util,INCLUDE_DIRECTORIES>)
 
