--- a/tools/rc/CMakeLists.txt
+++ b/tools/rc/CMakeLists.txt
@@ -15,6 +15,8 @@ endif()
 
 set_property(TARGET ${US_RCC_EXECUTABLE_TARGET} APPEND PROPERTY
              COMPILE_DEFINITIONS "MINIZ_NO_ARCHIVE_READING_API;MINIZ_NO_ZLIB_COMPATIBLE_NAMES")
+             
+set_property(TARGET ${US_RCC_EXECUTABLE_TARGET} PROPERTY FOLDER "tools")
 
 if(NOT US_NO_INSTALL)
     install(TARGETS ${US_RCC_EXECUTABLE_TARGET}
