--- a/tools/shell/CMakeLists.txt
+++ b/tools/shell/CMakeLists.txt
@@ -19,6 +19,7 @@ set(US_SHELL_EXECUTABLE_OUTPUT_NAME ${US_SHELL_EXECUTABLE_TARGET}${US_GLOBAL_VER
 
 add_executable(${US_SHELL_EXECUTABLE_TARGET} ${srcs})
 set_property(TARGET ${US_SHELL_EXECUTABLE_TARGET} PROPERTY OUTPUT_NAME ${US_SHELL_EXECUTABLE_OUTPUT_NAME})
+set_property(TARGET ${US_SHELL_EXECUTABLE_TARGET} PROPERTY FOLDER "tools")
 
 target_link_libraries(${US_SHELL_EXECUTABLE_TARGET} ${US_LIBRARIES})
 
