--- a/compendium/ConfigurationAdmin/src/CMakeLists.txt
+++ b/compendium/ConfigurationAdmin/src/CMakeLists.txt
@@ -26,6 +26,8 @@ set(_private_headers
 
 add_library(ConfigurationAdminObjs OBJECT ${_srcs} ${_private_headers})
 
+set_property(TARGET ConfigurationAdminObjs PROPERTY FOLDER compendium)
+
 if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
   get_property(_compile_flags TARGET ConfigurationAdminObjs PROPERTY COMPILE_FLAGS)
   set_property(TARGET ConfigurationAdminObjs PROPERTY COMPILE_FLAGS "${_compile_flags} -fPIC")
