--- a/compendium/tools/SCRCodeGen/CMakeLists.txt
+++ b/compendium/tools/SCRCodeGen/CMakeLists.txt
@@ -26,6 +26,7 @@ if (US_BUILD_TESTING)
 endif()
 
 set_property(TARGET ${US_SCRCODEGEN_EXECUTABLE_TARGET} PROPERTY OUTPUT_NAME ${US_SCRCODEGEN_EXECUTABLE_OUTPUT_NAME})
+set_property(TARGET ${US_SCRCODEGEN_EXECUTABLE_TARGET} PROPERTY FOLDER compendium)
 
 if(NOT US_NO_INSTALL)
     install(TARGETS ${US_SCRCODEGEN_EXECUTABLE_TARGET}
